--- a/about.html
+++ b/about.html
@@ -8,8 +8,10 @@
     <title>About</title>
 </head>
 <body>
-    <h1>Welcome!</h1>
+    <h1>Welcome to my About!</h1>
     <p>This is my about page.</p>
+    <a href="index.html">Home</a>
+    <p>Just a new paragraph to see the changes</p>
 
     
 </body>
